--- a/templates/z_ReFile/index.html
+++ b/templates/z_ReFile/index.html
@@ -95,7 +95,7 @@
 			{
 				if(msg==200)
 				{
-					window.location.href="http://112.253.2.61:8090/z_ReFile/index/Runmsg"
+					window.location.href="http://112.253.2.61:8090/z_ReFile/Runmsg"
 					// window.location.href="http://127.0.0.1:8000/z_ReFile/Runmsg"					
 				}else if(msg=500)
 				{
