--- a/templates/z_ReFile/index.html
+++ b/templates/z_ReFile/index.html
@@ -88,12 +88,15 @@
 		oid     = $("#oid").val();
 		Remarks     = $("#remarks").val();
 
-		if(Stime==""||Etime==""||ucid==""||oid==""||Remarks=="")
+		if(Stime==""||Etime==""||ucid==""||Remarks=="")
 		{
 			alert("您有项目没有填写")
 			return 0
 		}
-
+		if(oid=="")
+		{
+			oid="0"
+		}
 		$.ajax({
 			url:"/z_ReFile/takemassage/",
 			type:"post",
@@ -102,8 +105,8 @@
 			{
 				if(msg==200)
 				{
-					// window.location.href="http://112.253.2.61:8090/z_ReFile/Runmsg"
-					window.location.href="http://127.0.0.1:8000/z_ReFile/Runmsg/1"					
+					window.location.href="http://112.253.2.61:8090/z_ReFile/Runmsg/1"
+					// window.location.href="http://127.0.0.1:8000/z_ReFile/Runmsg/1"					
 				}else if(msg=500)
 				{
 					alert("开始时间必须小于结束时间")
