--- a/templates/z_ReFile/Runmsg.html
+++ b/templates/z_ReFile/Runmsg.html
@@ -65,9 +65,11 @@
 		<!-- <li><a href="http://127.0.0.1:8000/z_ReFile/Runmsg/"+{{i}}-1>&laquo;</a></li> -->
 		{%for i in totolpage%}
 		{%ifequal pageid i%}
-		<li class="active"><a href="http://127.0.0.1:8000/z_ReFile/Runmsg/{{i}}" >{{i}}</a></li>
+		<!-- <li class="active"><a href="http://127.0.0.1:8000/z_ReFile/Runmsg/{{i}}" >{{i}}</a></li> -->
+		<li class="active"><a href="http://112.253.2.61:8090/z_ReFile/Runmsg/{{i}}" >{{i}}</a></li>
 		{%else%}
-		<li><a href="http://127.0.0.1:8000/z_ReFile/Runmsg/{{i}}" >{{i}}</a></li>
+		<!-- <li><a href="http://127.0.0.1:8000/z_ReFile/Runmsg/{{i}}" >{{i}}</a></li> -->
+		<li><a href="http://112.253.2.61:8090/z_ReFile/Runmsg/{{i}}" >{{i}}</a></li>
 		{%endifequal%}
 		{%endfor%}
 		<!-- <li><a href="http://127.0.0.1:8000/z_ReFile/Runmsg/">&raquo;</a></li> -->
