--- a/templates/z_ReFile/index.html
+++ b/templates/z_ReFile/index.html
@@ -18,9 +18,18 @@
 </style>
 
 <body>
-
+<nav class="navbar navbar-default" role="navigation" style="border-left:0px">
+	<div class="navbar-header">
+		<a class="navbar-brand">Feed</a>
+	</div>
+	<div>
+		<ul class="nav navbar-nav">
+			<li class="active"><a href="/z_ReFile/index">start feed</a></li>
+			<li><a href="/z_ReFile/Runmsg/1">feed list</a></li>
+		</ul>
+	</div>
+</nav>
 <div class="form-group" style="width:950px;margin:20px">
-	<h1>feed go</h1>
 
 	<div class="input-group" >
 	<span class="input-group-addon" >备注</span>
@@ -46,13 +55,13 @@
 
 	<div class="input-group" >
 	<span class="input-group-addon" >ucid</span>
-	<input type="text" class="form-control" placeholder="10-20" style="width:345px;" id="ucid">
+	<input type="text" class="form-control" placeholder="ucid唯一" style="width:345px;" id="ucid">
 	</div>
 	<br/>
 
 	<div class="input-group">
 	<span class="input-group-addon">oid</span>
-	<input type="text" class="form-control" placeholder="5-10" style="width:353px;" id="oid">
+	<input type="text" class="form-control" placeholder="iod数量不高于20个" style="width:353px;" id="oid">
 	</div>
 	
 	<br/>
@@ -105,15 +114,15 @@
 			{
 				if(msg==200)
 				{
-					window.location.href="http://112.253.2.61:8090/z_ReFile/Runmsg/1"
-					// window.location.href="http://127.0.0.1:8000/z_ReFile/Runmsg/1"					
-				}else if(msg=500)
+					// window.location.href="http://112.253.2.61:8090/z_ReFile/Runmsg/1"
+					window.location.href="/z_ReFile/Runmsg/1"					
+				}else if(msg==500)
 				{
 					alert("开始时间必须小于结束时间")
-				}else if(msg=400)
+				}else if(msg==400)
 				{
 					alert("主机需要休息一下")
-				}else if(msg=300)
+				}else if(msg==300)
 				{
 					alert("您提交了太多任务,宝宝处理不过来了")
 				}
