--- a/templates/z_ReFile/index.html
+++ b/templates/z_ReFile/index.html
@@ -112,7 +112,7 @@
 				url:"/z_ReFile/takemassage/",
 				type:"post",
 				data:{"Stime":Stime,"Etime":Etime,"ucid":ucid,"Remarks":Remarks,"oid":oid},
-				async:false,
+				// async:false,
 				success:function(msg)
 				{
 					if(msg==200)
